使用 Colaboratory 创建

--- a/bert_analysis.ipynb
+++ b/bert_analysis.ipynb
@@ -242,7 +242,7 @@
       "metadata": {
         "id": "1up16TvMNwHU",
         "colab_type": "code",
-        "outputId": "ecf92b7e-14ea-4d18-fe84-5947bd7babf0",
+        "outputId": "db01d097-8f8c-49ba-afb4-95af138e32f3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -265,7 +265,7 @@
         "from torch.autograd import Variable\n",
         "from pytorch_pretrained_bert import BertTokenizer, BertModel, BertForMaskedLM, BertAdam"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,7 +451,7 @@
         "  model = model.train()\n",
         "  loss_fn = nn.CrossEntropyLoss()\n",
         "  all_loss, all_accuracy = 0.0, 0.0\n",
-        "  hit, tot, cnt = 0, 0, 0\n",
+        "  hit, cnt = 0, 0\n",
         "  for i, (x, mask, target) in enumerate(train_loader):\n",
         "    x = x.cuda().long()\n",
         "    mask = mask.cuda().long()\n",
@@ -471,12 +471,12 @@
         "    if i % print_every == 0:\n",
         "      logger.info('Epoch %d, Iter %d, loss=%.4f, acc=%.4f' % (epoch, i, loss, accuracy))\n",
         "      print(time.strftime(\"%Y-%m-%d %H:%M:%S \", time.localtime()) + 'Epoch %d, Iter %d, loss=%.4f, acc=%.4f' % (epoch, i, loss, accuracy))\n",
-        "    all_loss += float(loss) * int(tot)\n",
+        "    all_loss += float(loss) * int(x.shape[0])\n",
         "    all_accuracy += float(hit)\n",
         "    cnt += int(x.shape[0])\n",
         "    \n",
-        "  all_loss /= float(tot)\n",
-        "  all_accuracy /= float(tot)\n",
+        "  all_loss /= float(cnt)\n",
+        "  all_accuracy /= float(cnt)\n",
         "  logger.info('Epoch %d, train_loss=%.4f, train_accuracy=%.4f' % (epoch, all_loss, all_accuracy))\n",
         "  print(time.strftime(\"%Y-%m-%d %H:%M:%S \", time.localtime()) + 'Epoch %d, train_loss=%.4f, train_accuracy=%.4f' % (epoch, all_loss, all_accuracy))\n",
         "  return model, optimizer\n",
@@ -527,22 +527,22 @@
       "metadata": {
         "id": "DZY_IjiVO4Zt",
         "colab_type": "code",
-        "outputId": "6a6c1cef-ec02-4027-b92a-5d0dd9cb3218",
+        "outputId": "aa4d7511-1763-40d9-d332-52e7da9c59d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 305
+          "height": 323
         }
       },
       "cell_type": "code",
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 16,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Fri Dec 21 05:02:00 2018       \n",
+            "Fri Dec 21 05:21:02 2018       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 396.44                 Driver Version: 396.44                    |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -550,13 +550,14 @@
             "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla K80           Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   61C    P0    57W / 149W |   8552MiB / 11441MiB |      0%      Default |\n",
+            "| N/A   36C    P8    26W / 149W |      0MiB / 11441MiB |      0%      Default |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
             "+-----------------------------------------------------------------------------+\n",
             "| Processes:                                                       GPU Memory |\n",
             "|  GPU       PID   Type   Process name                             Usage      |\n",
             "|=============================================================================|\n",
+            "|  No running processes found                                                 |\n",
             "+-----------------------------------------------------------------------------+\n"
           ],
           "name": "stdout"
@@ -584,10 +585,10 @@
         "torch.set_default_tensor_type('torch.FloatTensor')\n",
         "device = torch.device(\"cuda\")\n",
         "end_epoch = 30\n",
-        "tag = 'en'\n",
-        "lr = 5e-5\n",
+        "tag = 'en' # en英文，cn中文\n",
+        "lr = 5e-5 #可以调节\n",
         "checkpoint = ''\n",
-        "bz = 32\n",
+        "bz = 32  #理论上越大就越快越好但也需要更多Epoch\n",
         "warmup_proportion = 0.1\n",
         "bst_acc = 0.0"
       ],
@@ -608,11 +609,7 @@
       "metadata": {
         "id": "4tvUPCngPTQL",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "5ead1c81-f9a6-4180-a9f6-8c430e19816d"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -644,16 +641,8 @@
         "optimizer_grouped_parameters = [{'params': base_params, 'weight_decay': 0.01}, {'params': myModel.bert.parameters(), 'weight_decay': 0.0, 'lr': 1e-6}]\n",
         "optimizer = BertAdam(optimizer_grouped_parameters, lr=lr, warmup=warmup_proportion, t_total=train_set.__len__())"
       ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 407873900/407873900 [00:09<00:00, 42118639.19B/s]\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -702,10 +691,10 @@
       "metadata": {
         "id": "wAX-He7RRIxE",
         "colab_type": "code",
-        "outputId": "16ab4ceb-f693-4743-b993-127794b2d8cc",
+        "outputId": "7a96bdbc-ff71-4dcb-8319-c60ecb5428bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 389
+          "height": 479
         }
       },
       "cell_type": "code",
@@ -722,31 +711,30 @@
         "  \n",
         "logger.info(\"Finish\")"
       ],
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2018-12-21 04:46:18 Epoch 0, Iter 0, loss=1.1430, acc=0.5938\n",
-            "2018-12-21 04:47:57 Epoch 0, Iter 50, loss=0.7682, acc=0.5938\n",
-            "2018-12-21 04:49:36 Epoch 0, Iter 100, loss=0.8953, acc=0.4062\n",
-            "2018-12-21 04:51:15 Epoch 0, Iter 150, loss=0.5774, acc=0.7500\n",
-            "2018-12-21 04:52:55 Epoch 0, Iter 200, loss=0.7016, acc=0.6562\n",
-            "2018-12-21 04:54:34 Epoch 0, Iter 250, loss=0.6229, acc=0.6875\n",
-            "2018-12-21 04:55:25 Epoch 0, train_loss=0.0000, train_accuracy=0.5526\n",
-            "2018-12-21 05:01:42 Epoch 0, valid_loss=0.4956, valid_accuracy=0.7550\n"
+            "2018-12-21 05:21:18 Epoch 0, Iter 0, loss=0.7643, acc=0.5938\n",
+            "2018-12-21 05:22:57 Epoch 0, Iter 50, loss=0.6936, acc=0.5625\n",
+            "2018-12-21 05:24:36 Epoch 0, Iter 100, loss=0.6698, acc=0.5625\n",
+            "2018-12-21 05:26:15 Epoch 0, Iter 150, loss=0.8139, acc=0.5938\n",
+            "2018-12-21 05:27:55 Epoch 0, Iter 200, loss=0.7136, acc=0.6250\n",
+            "2018-12-21 05:29:34 Epoch 0, Iter 250, loss=0.7148, acc=0.6250\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "error",
-          "ename": "NameError",
+          "ename": "ZeroDivisionError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-b8b1a8a24b22>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogger\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m   \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0maccuracy\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mbst_acc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mbst_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maccuracy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mstate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'model_state'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mmyModel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'epoch'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'optim_state'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'acc'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbst_acc\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'bst_acc' is not defined"
+            "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-b8b1a8a24b22>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend_epoch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'=> Epoch %d, lr = %0.6f <='\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogger\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprint_every\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m   \u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogger\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-4-d8e4880d7115>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, train_loader, optimizer, logger, epoch, print_every)\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mcnt\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m   \u001b[0mall_loss\u001b[0m \u001b[0;34m/=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m   \u001b[0mall_accuracy\u001b[0m \u001b[0;34m/=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m   \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Epoch %d, train_loss=%.4f, train_accuracy=%.4f'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_accuracy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mZeroDivisionError\u001b[0m: float division by zero"
           ]
         }
       ]
