使用 Colaboratory 创建

--- a/bert_analysis.ipynb
+++ b/bert_analysis.ipynb
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Foruck/sentiment-analysis-demo/blob/master/bert_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Foruck/sentiment-analysis-demo/blob/attention/bert_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -70,7 +70,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
         "!cp /content/gdrive/My\\ Drive/en_valid_data.h5 en_valid_data.h5\n",
         "!ls"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +174,7 @@
         "\n",
         "!pip install pytorch_pretrained_bert"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,7 +244,7 @@
       "metadata": {
         "id": "1up16TvMNwHU",
         "colab_type": "code",
-        "outputId": "1898224f-3cd9-4e4b-ffd8-9d73d7a28b61",
+        "outputId": "d65a965f-0d3d-4a99-9e61-97604bd5ec8b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -267,7 +267,7 @@
         "from torch.autograd import Variable\n",
         "from pytorch_pretrained_bert import BertTokenizer, BertModel, BertForMaskedLM, BertAdam"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,28 +348,20 @@
         "    # Bert model\n",
         "    self.bert = BertModel.from_pretrained(bert_path)\n",
         "\n",
-        "    # Convolution layers\n",
-        "    conv1, conv2, conv3, conv4 = [], [], [], []\n",
-        "    for i in range(self.num_filter):\n",
-        "      conv1.append(nn.Conv2d(1, 256, (window[i], embedding_length), stride=(1, 1), padding=(int((window[i] - 1) / 2), 0))) # out n*64*128*1\n",
-        "      conv2.append(nn.Conv1d(256, 128, 3, stride=1, padding=1)) # out n*128*64\n",
-        "      conv3.append(nn.Conv1d(128, 64, 3, stride=1, padding=1)) # out n*64*32\n",
-        "      conv4.append(nn.Conv1d(64, 16, 1, stride=1, padding=0)) # out n*16*16\n",
-        "    self.conv1, self.conv2 = nn.ModuleList(conv1), nn.ModuleList(conv2)\n",
-        "    self.conv3, self.conv4 = nn.ModuleList(conv3), nn.ModuleList(conv4)\n",
-        "    for i in range(self.num_filter):\n",
-        "      init.kaiming_normal_(self.conv1[i].weight.data)\n",
-        "      init.kaiming_normal_(self.conv2[i].weight.data)\n",
-        "      init.kaiming_normal_(self.conv3[i].weight.data)\n",
-        "      init.kaiming_normal_(self.conv4[i].weight.data)\n",
         "    self.dropout = nn.Dropout(p=0.5)\n",
         "\n",
         "    # LSTM layers\n",
         "    self.lstm1 = nn.LSTMCell(embedding_length, LSTM_Hidden_Size) # out n*1*LSTM_Hidden_Size\n",
         "    self.lstm2 = nn.LSTMCell(embedding_length, LSTM_Hidden_Size)\n",
+        "    \n",
+        "    # Attention\n",
+        "    self.h1k1 = nn.Linear(LSTM_Hidden_Size, 64)\n",
+        "    self.k1e1 = nn.Linear(64, 1)\n",
+        "    self.h2k2 = nn.Linear(LSTM_Hidden_Size, 64)\n",
+        "    self.k2e2 = nn.Linear(64, 1)\n",
         "\n",
         "    # FC layer\n",
-        "    self.fc = nn.Linear(LSTM_Hidden_Size * 2 + 256 * self.num_filter, classes)\n",
+        "    self.fc = nn.Linear(LSTM_Hidden_Size * 2, classes)\n",
         "    init.kaiming_normal_(self.fc.weight.data)\n",
         "    self.fc.bias.data.fill_(0)\n",
         "    \n",
@@ -407,25 +399,19 @@
         "      hxs1[:, i, :] = hx1\n",
         "      hx2, cx2 = self.lstm1(x0[:, x0.shape[1] - 1 - i, :], (hx2, cx2))\n",
         "      hxs2[:, i, :] = hx2\n",
-        "    lstm_x = torch.cat((torch.mean(hxs1, 1, True).squeeze(1), torch.mean(hxs2, 1, True).squeeze(1)), 1)\n",
-        "\n",
-        "    # Go Through CNN\n",
-        "    x = []\n",
-        "    for i in range(self.num_filter):\n",
-        "      x.append(self.conv1[i](inputs))\n",
-        "      x[i] = x[i].squeeze(3)\n",
-        "      x[i] = F.relu(F.max_pool1d(x[i], kernel_size=2, stride=2))\n",
-        "      x[i] = self.conv2[i](x[i])\n",
-        "      x[i] = F.relu(F.max_pool1d(x[i], kernel_size=2, stride=2))\n",
-        "      x[i] = self.conv3[i](x[i])\n",
-        "      x[i] = F.relu(F.max_pool1d(x[i], kernel_size=2, stride=2))\n",
-        "      x[i] = self.conv4[i](x[i])\n",
-        "      x[i] = x[i].view(n, -1)\n",
-        "      x[i] = self.dropout(x[i])\n",
-        "        \n",
-        "    cnn_x = torch.cat(x, 1)\n",
-        "    x1 = torch.cat((lstm_x, cnn_x), 1)\n",
-        "    x1 = self.dropout(self.fc(x1))\n",
+        "      \n",
+        "    k1 = self.h1k1(hxs1) # n*128*64\n",
+        "    e1 = self.k1e1(k1).squeeze(2) # n*128*1 -> n*128\n",
+        "    e1 = F.softmax(e1).unsqueeze(1) # n*1*128\n",
+        "    lstm1 = torch.matmul(e1, hxs1).squeeze(1)\n",
+        "    k2 = self.h2k2(hxs2) # n*128*64\n",
+        "    e2 = self.k2e2(k2).squeeze(2)\n",
+        "    e2 = F.softmax(e2).unsqueeze(1)\n",
+        "    lstm2 = torch.matmul(e2, hxs2).squeeze(1)\n",
+        "    \n",
+        "    lstm_x = torch.cat((lstm1, lstm2), 1)\n",
+        "    \n",
+        "    x1 = self.dropout(self.fc(lstm_x))\n",
         "    return x1"
       ],
       "execution_count": 0,
@@ -468,11 +454,11 @@
         "    \n",
         "    pred = torch.argmax(scores, dim=1)\n",
         "    hit = torch.sum(target == pred)\n",
-        "    \n",
         "    accuracy = float(hit) / int(x.shape[0])\n",
         "    if i % print_every == 0:\n",
         "      logger.info('Epoch %d, Iter %d, loss=%.4f, acc=%.4f' % (epoch, i, loss, accuracy))\n",
         "      print(time.strftime(\"%Y-%m-%d %H:%M:%S \", time.localtime()) + 'Epoch %d, Iter %d, loss=%.4f, acc=%.4f' % (epoch, i, loss, accuracy))\n",
+        "    \n",
         "    all_loss += float(loss) * int(x.shape[0])\n",
         "    all_accuracy += float(hit)\n",
         "    cnt += int(x.shape[0])\n",
@@ -496,7 +482,6 @@
         "    \n",
         "    scores = model(x, mask)\n",
         "    loss = loss_fn(scores, target)\n",
-        "    \n",
         "    pred = torch.argmax(scores, dim=1)\n",
         "    \n",
         "    hit += float(torch.sum(target == pred))\n",
@@ -526,7 +511,7 @@
       "metadata": {
         "id": "DZY_IjiVO4Zt",
         "colab_type": "code",
-        "outputId": "8414ba67-d6be-4c81-ea4e-9a8ed2282fa6",
+        "outputId": "ec6dcb61-b56c-415d-f9bc-22502e03b9f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 323
@@ -536,12 +521,12 @@
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Fri Dec 21 07:30:59 2018       \n",
+            "Fri Dec 21 11:33:22 2018       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 396.44                 Driver Version: 396.44                    |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -549,7 +534,7 @@
             "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla K80           Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   46C    P8    29W / 149W |      0MiB / 11441MiB |      0%      Default |\n",
+            "| N/A   64C    P0    68W / 149W |      0MiB / 11441MiB |      0%      Default |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
             "+-----------------------------------------------------------------------------+\n",
@@ -585,9 +570,9 @@
         "device = torch.device(\"cuda\")\n",
         "end_epoch = 30\n",
         "tag = 'en' # en英文，cn中文\n",
-        "lr = 5e-5 #可以调节\n",
+        "lr = 1e-3 #可以调节\n",
         "checkpoint = ''\n",
-        "bz = 48\n",
+        "bz = 24\n",
         "warmup_proportion = 0.1\n",
         "bst_acc = 0.0"
       ],
@@ -637,7 +622,7 @@
         "myModel = myModel.cuda()\n",
         "ignored_params = list(map(id, myModel.bert.parameters()))\n",
         "base_params = filter(lambda p: id(p) not in ignored_params, myModel.parameters())\n",
-        "optimizer_grouped_parameters = [{'params': base_params, 'weight_decay': 0.01}, {'params': myModel.bert.parameters(), 'weight_decay': 0.0, 'lr': 1e-6}]\n",
+        "optimizer_grouped_parameters = [{'params': base_params, 'weight_decay': 0.01}, {'params': myModel.bert.parameters(), 'weight_decay': 0.0, 'lr': 3e-5}]\n",
         "optimizer = BertAdam(optimizer_grouped_parameters, lr=lr, warmup=warmup_proportion, t_total=train_set.__len__())"
       ],
       "execution_count": 0,
@@ -690,10 +675,10 @@
       "metadata": {
         "id": "wAX-He7RRIxE",
         "colab_type": "code",
-        "outputId": "3086c8bd-5eca-4ed1-b5e8-7f277c02de31",
+        "outputId": "5eab4c01-6ca3-4474-f91d-d51ce8e05593",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 1439
         }
       },
       "cell_type": "code",
@@ -715,7 +700,85 @@
         {
           "output_type": "stream",
           "text": [
-            "2018-12-21 07:31:16 Epoch 0, Iter 0, loss=1.1272, acc=0.5625\n"
+            "2018-12-21 11:33:37 Epoch 0, Iter 0, loss=1.8241, acc=0.5000\n",
+            "2018-12-21 11:34:57 Epoch 0, Iter 50, loss=0.7922, acc=0.5833\n",
+            "2018-12-21 11:36:18 Epoch 0, Iter 100, loss=0.4415, acc=0.7500\n",
+            "2018-12-21 11:37:39 Epoch 0, Iter 150, loss=0.6352, acc=0.6667\n",
+            "2018-12-21 11:38:59 Epoch 0, Iter 200, loss=0.7279, acc=0.6667\n",
+            "2018-12-21 11:40:20 Epoch 0, Iter 250, loss=0.4562, acc=0.7917\n",
+            "2018-12-21 11:41:41 Epoch 0, Iter 300, loss=0.5325, acc=0.6667\n",
+            "2018-12-21 11:43:01 Epoch 0, Iter 350, loss=0.4433, acc=0.7500\n",
+            "2018-12-21 11:43:30 Epoch 0, train_loss=0.5942, train_accuracy=0.6719\n",
+            "2018-12-21 11:45:22 Epoch 0, valid_loss=0.3968, valid_accuracy=0.8341\n",
+            "2018-12-21 11:45:32 Epoch 1, Iter 0, loss=0.7261, acc=0.7083\n",
+            "2018-12-21 11:46:53 Epoch 1, Iter 50, loss=0.3520, acc=0.7917\n",
+            "2018-12-21 11:48:14 Epoch 1, Iter 100, loss=0.1816, acc=0.8333\n",
+            "2018-12-21 11:49:35 Epoch 1, Iter 150, loss=0.3821, acc=0.7083\n",
+            "2018-12-21 11:50:56 Epoch 1, Iter 200, loss=0.4741, acc=0.7083\n",
+            "2018-12-21 11:52:17 Epoch 1, Iter 250, loss=0.5086, acc=0.6250\n",
+            "2018-12-21 11:53:38 Epoch 1, Iter 300, loss=0.4610, acc=0.6250\n",
+            "2018-12-21 11:54:58 Epoch 1, Iter 350, loss=0.2077, acc=0.9167\n",
+            "2018-12-21 11:55:27 Epoch 1, train_loss=0.4443, train_accuracy=0.7559\n",
+            "2018-12-21 11:57:18 Epoch 1, valid_loss=0.3840, valid_accuracy=0.8374\n",
+            "2018-12-21 11:57:28 Epoch 2, Iter 0, loss=0.4770, acc=0.7500\n",
+            "2018-12-21 11:58:49 Epoch 2, Iter 50, loss=0.5271, acc=0.7917\n",
+            "2018-12-21 12:00:10 Epoch 2, Iter 100, loss=0.2390, acc=0.8333\n",
+            "2018-12-21 12:01:31 Epoch 2, Iter 150, loss=0.5051, acc=0.7917\n",
+            "2018-12-21 12:02:52 Epoch 2, Iter 200, loss=0.2985, acc=0.8333\n",
+            "2018-12-21 12:04:13 Epoch 2, Iter 250, loss=0.6310, acc=0.7083\n",
+            "2018-12-21 12:05:34 Epoch 2, Iter 300, loss=0.2175, acc=0.9167\n",
+            "2018-12-21 12:06:54 Epoch 2, Iter 350, loss=0.5086, acc=0.5833\n",
+            "2018-12-21 12:07:23 Epoch 2, train_loss=0.3722, train_accuracy=0.7930\n",
+            "2018-12-21 12:09:15 Epoch 2, valid_loss=0.4068, valid_accuracy=0.8545\n",
+            "2018-12-21 12:09:25 Epoch 3, Iter 0, loss=0.5209, acc=0.7083\n",
+            "2018-12-21 12:10:47 Epoch 3, Iter 50, loss=0.4145, acc=0.8333\n",
+            "2018-12-21 12:12:07 Epoch 3, Iter 100, loss=0.2208, acc=0.9583\n",
+            "2018-12-21 12:13:29 Epoch 3, Iter 150, loss=0.2748, acc=0.8333\n",
+            "2018-12-21 12:14:49 Epoch 3, Iter 200, loss=0.2712, acc=0.7500\n",
+            "2018-12-21 12:16:10 Epoch 3, Iter 250, loss=0.2891, acc=0.7917\n",
+            "2018-12-21 12:17:30 Epoch 3, Iter 300, loss=0.6798, acc=0.7083\n",
+            "2018-12-21 12:18:51 Epoch 3, Iter 350, loss=0.2450, acc=0.9167\n",
+            "2018-12-21 12:19:20 Epoch 3, train_loss=0.3046, train_accuracy=0.8312\n",
+            "2018-12-21 12:21:12 Epoch 3, valid_loss=0.3542, valid_accuracy=0.8618\n",
+            "2018-12-21 12:21:22 Epoch 4, Iter 0, loss=0.3150, acc=0.7500\n",
+            "2018-12-21 12:22:44 Epoch 4, Iter 50, loss=0.2011, acc=0.8750\n",
+            "2018-12-21 12:24:06 Epoch 4, Iter 100, loss=0.2366, acc=0.8750\n",
+            "2018-12-21 12:25:27 Epoch 4, Iter 150, loss=0.2610, acc=0.7917\n",
+            "2018-12-21 12:26:49 Epoch 4, Iter 200, loss=0.2137, acc=0.8333\n",
+            "2018-12-21 12:28:09 Epoch 4, Iter 250, loss=0.2784, acc=0.7083\n",
+            "2018-12-21 12:29:30 Epoch 4, Iter 300, loss=0.2215, acc=0.8333\n",
+            "2018-12-21 12:30:52 Epoch 4, Iter 350, loss=0.1670, acc=0.9583\n",
+            "2018-12-21 12:31:21 Epoch 4, train_loss=0.2496, train_accuracy=0.8482\n",
+            "2018-12-21 12:33:13 Epoch 4, valid_loss=0.4153, valid_accuracy=0.8587\n",
+            "2018-12-21 12:33:15 Epoch 5, Iter 0, loss=0.4319, acc=0.6667\n",
+            "2018-12-21 12:34:37 Epoch 5, Iter 50, loss=0.2136, acc=0.8333\n",
+            "2018-12-21 12:35:59 Epoch 5, Iter 100, loss=0.2339, acc=0.8333\n",
+            "2018-12-21 12:37:19 Epoch 5, Iter 150, loss=0.1796, acc=0.9167\n",
+            "2018-12-21 12:38:41 Epoch 5, Iter 200, loss=0.0891, acc=0.9583\n",
+            "2018-12-21 12:40:02 Epoch 5, Iter 250, loss=0.1585, acc=0.8333\n",
+            "2018-12-21 12:41:23 Epoch 5, Iter 300, loss=0.2440, acc=0.7917\n",
+            "2018-12-21 12:42:44 Epoch 5, Iter 350, loss=0.1371, acc=0.9167\n",
+            "2018-12-21 12:43:13 Epoch 5, train_loss=0.2130, train_accuracy=0.8638\n",
+            "2018-12-21 12:45:05 Epoch 5, valid_loss=0.5921, valid_accuracy=0.8622\n",
+            "2018-12-21 12:45:15 Epoch 6, Iter 0, loss=0.1450, acc=0.8333\n",
+            "2018-12-21 12:46:37 Epoch 6, Iter 50, loss=0.2035, acc=0.9167\n",
+            "2018-12-21 12:47:58 Epoch 6, Iter 100, loss=0.1461, acc=0.9167\n",
+            "2018-12-21 12:49:20 Epoch 6, Iter 150, loss=0.2050, acc=0.8333\n",
+            "2018-12-21 12:50:41 Epoch 6, Iter 200, loss=0.2397, acc=0.7917\n",
+            "2018-12-21 12:52:02 Epoch 6, Iter 250, loss=0.0876, acc=0.9167\n",
+            "2018-12-21 12:53:23 Epoch 6, Iter 300, loss=0.2948, acc=0.7083\n",
+            "2018-12-21 12:54:44 Epoch 6, Iter 350, loss=0.2071, acc=0.9167\n",
+            "2018-12-21 12:55:12 Epoch 6, train_loss=0.1948, train_accuracy=0.8721\n",
+            "2018-12-21 12:57:05 Epoch 6, valid_loss=0.4667, valid_accuracy=0.8699\n",
+            "2018-12-21 12:57:15 Epoch 7, Iter 0, loss=0.2428, acc=0.8750\n",
+            "2018-12-21 12:58:37 Epoch 7, Iter 50, loss=0.1172, acc=0.9167\n",
+            "2018-12-21 12:59:58 Epoch 7, Iter 100, loss=0.1462, acc=0.9167\n",
+            "2018-12-21 13:01:19 Epoch 7, Iter 150, loss=0.2030, acc=0.7917\n",
+            "2018-12-21 13:02:40 Epoch 7, Iter 200, loss=0.1738, acc=0.8750\n",
+            "2018-12-21 13:04:01 Epoch 7, Iter 250, loss=0.1168, acc=1.0000\n",
+            "2018-12-21 13:05:22 Epoch 7, Iter 300, loss=0.2434, acc=0.8333\n",
+            "2018-12-21 13:06:42 Epoch 7, Iter 350, loss=0.1791, acc=0.8333\n",
+            "2018-12-21 13:07:10 Epoch 7, train_loss=0.1848, train_accuracy=0.8760\n"
           ],
           "name": "stdout"
         }
